Table users {
  id bigint [pk, increment]
  email varchar [not null, unique]
  phone varchar [unique]
  password_hash varchar [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table roles {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table user_roles {
  user_id bigint [not null]
  role_id smallint [not null]

  Indexes {
    (user_id, role_id) [pk]
  }
}

Table addresses {
  id bigint [pk, increment]
  user_id bigint [not null]
  label varchar
  country varchar [not null]
  city varchar [not null]
  street varchar [not null]
  house varchar [not null]
  apartment varchar
  postal_code varchar
  comment varchar
  created_at timestamptz [not null, default: `now()`]
}

Table sellers {
  id bigint [pk, increment]
  user_id bigint [not null, unique]
  shop_name varchar [not null]
  legal_name varchar
  inn varchar
  created_at timestamptz [not null, default: `now()`]
}

Table products {
  id bigint [pk, increment]
  seller_id bigint [not null]
  title varchar [not null]
  description text
  brand varchar
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
}

Table skus {
  id bigint [pk, increment]
  product_id bigint [not null]
  sku_code varchar [not null, unique]
  price numeric(12,2) [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table attributes {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table attribute_values {
  id bigint [pk, increment]
  attribute_id smallint [not null]
  value varchar [not null]

  Indexes {
    (attribute_id, value) [unique]
  }
}


Table sku_attribute_values {
  sku_id bigint [not null]
  attribute_id smallint [not null]
  attribute_value_id bigint [not null]

  Indexes {
    (sku_id, attribute_id) [unique]
    (sku_id, attribute_value_id) [unique]
  }
}

Table warehouses {
  id bigint [pk, increment]
  seller_id bigint [not null]
  name varchar [not null]
  address_text varchar
  created_at timestamptz [not null, default: `now()`]
}

Table inventory {
  warehouse_id bigint [not null]
  sku_id bigint [not null]
  qty integer [not null, default: 0]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (warehouse_id, sku_id) [pk]
  }
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [not null]
  status varchar [not null, default: 'active']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table cart_items {
  cart_id bigint [not null]
  sku_id bigint [not null]
  qty integer [not null, default: 1]
  added_at timestamptz [not null, default: `now()`]

  Indexes {
    (cart_id, sku_id) [pk]
  }
}

Table orders {
  id bigint [pk, increment]
  user_id bigint [not null]
  address_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table seller_orders {
  id bigint [pk, increment]
  order_id bigint [not null]
  seller_id bigint [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (order_id, seller_id) [unique]
  }
}

Table order_items {
  id bigint [pk, increment]
  seller_order_id bigint [not null]
  sku_id bigint [not null]
  qty integer [not null]
  unit_price numeric(12,2) [not null]

  Indexes {
    (seller_order_id, sku_id) [unique]
  }
}

Table order_statuses {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table seller_order_status_history {
  id bigint [pk, increment]
  seller_order_id bigint [not null]
  status_id smallint [not null]
  changed_at timestamptz [not null, default: `now()`]
  changed_by_user_id bigint
}

Table payment_methods {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table payment_statuses {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table payments {
  id bigint [pk, increment]
  order_id bigint [not null]
  method_id smallint [not null]
  status_id smallint [not null]
  amount numeric(12,2) [not null]
  provider varchar
  provider_payment_id varchar
  created_at timestamptz [not null, default: `now()`]
  paid_at timestamptz
}

Table delivery_services {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table shipments {
  id bigint [pk, increment]
  seller_order_id bigint [not null]
  delivery_service_id smallint [not null]
  tracking_number varchar
  shipping_cost numeric(12,2) [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  shipped_at timestamptz
  delivered_at timestamptz
}

Table shipment_statuses {
  id smallint [pk, increment]
  code varchar [not null, unique]
  name varchar [not null]
}

Table shipment_status_history {
  id bigint [pk, increment]
  shipment_id bigint [not null]
  status_id smallint [not null]
  changed_at timestamptz [not null, default: `now()`]
}


Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id

Ref: addresses.user_id > users.id

Ref: sellers.user_id > users.id

Ref: products.seller_id > sellers.id

Ref: skus.product_id > products.id

Ref: attribute_values.attribute_id > attributes.id

Ref: sku_attribute_values.sku_id > skus.id
Ref: sku_attribute_values.attribute_id > attributes.id
Ref: sku_attribute_values.attribute_value_id > attribute_values.id

Ref: warehouses.seller_id > sellers.id
Ref: inventory.warehouse_id > warehouses.id
Ref: inventory.sku_id > skus.id

Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.sku_id > skus.id

Ref: orders.user_id > users.id
Ref: orders.address_id > addresses.id

Ref: seller_orders.order_id > orders.id
Ref: seller_orders.seller_id > sellers.id

Ref: order_items.seller_order_id > seller_orders.id
Ref: order_items.sku_id > skus.id

Ref: seller_order_status_history.seller_order_id > seller_orders.id
Ref: seller_order_status_history.status_id > order_statuses.id
Ref: seller_order_status_history.changed_by_user_id > users.id

Ref: payments.order_id > orders.id
Ref: payments.method_id > payment_methods.id
Ref: payments.status_id > payment_statuses.id

Ref: shipments.seller_order_id > seller_orders.id
Ref: shipments.delivery_service_id > delivery_services.id

Ref: shipment_status_history.shipment_id > shipments.id
Ref: shipment_status_history.status_id > shipment_statuses.id
